--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap" rel="stylesheet">
+
     <title>Space Cream</title>
   </head>
   <body>
     <header>
-      <img src="assets/sorvete.svg" />
+      <img src="assets/logo 1.png" alt="logo com sorvete roxo e uma lua no fundo" />
       <h1>space cream</h1>
     </header>
     <main>
@@ -20,6 +24,14 @@
         dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
         aliquet
       </p>
+
+      <img src="assets/sorvete1.png" alt="paletas de frutas vermelhas na cor roxa"/>
+
+      <img src="assets/sorvete2.png" alt="shake de frutas vermelhas"/>
+
+      <img src="assets/sorvete3.png" alt="sorvete de massa na cor roxa"/>
+
+      <img src="assets/sorvete4.png" alt="picolé misto de crocante e de frutas"/>
     </main>
     <footer></footer>
   </body>
