--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <img src="assets/logo 1.png" alt="logo com sorvete roxo e uma lua no fundo" />
+      <img id= "logo" src="assets/logo 1.png" alt="logo com sorvete roxo e uma lua no fundo" />
       <h1>space cream</h1>
     </header>
     <main>
