--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 
-    <title>Space Cream</title>
-  </head>
-  <body>
-    <header>
-      <img
-        id="logo"
-        src="assets/logo 1.png"
-        alt="logo com sorvete roxo e uma lua no fundo"
-      />
-      <h1>space cream</h1>
-    </header>
-    <main>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus
-        leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
-        dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
-        aliquet
-      </p>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap" rel="stylesheet">
 
-      <div id="images">      
-        <img
-          src="assets/sorvete1.png"
-          alt="paletas de frutas vermelhas na cor roxa"
-        />
+  <title>Space Cream</title>
+</head>
 
-        <img src="assets/sorvete2.png" alt="shake de frutas vermelhas" />
+<body>
+  <header>
+    <img id="logo" src="assets/logo 1.png" alt="logo com sorvete roxo e uma lua no fundo" />
+    <h1>space cream</h1>
+  </header>
+  <main>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus
+      leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
+      dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
+      aliquet
+    </p>
 
-        <img src="assets/sorvete3.png" alt="sorvete de massa na cor roxa" />
+    <div class="card">
+      <img src="assets/sorvete1.png" alt="paletas de frutas vermelhas na cor roxa">
+      <span>paletas</span>
+    </div>
 
-        <img
-          src="assets/sorvete4.png"
-          alt="picolé misto de crocante e de frutas"
-        />
-      </div>
-    </main>
-    <footer></footer>
-  </body>
+    <div class="card">
+      <img src="assets/sorvete2.png" alt="shake de frutas vermelhas">
+      <span>shakes</span>
+    </div>
+
+    <div class="card">
+      <img src="assets/sorvete3.png" alt="sorvete de massa na cor roxa">
+      <span>massas</span>
+    </div>
+
+    <div class="card">
+      <img src="assets/sorvete4.png" alt="picolé misto de crocante e de frutas">
+      <span>picolés</span>
+    </div>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
